feat(ingredients): add description and supplier

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
+    background-color: #fce4ec;
     margin: 0;
     padding: 0;
     display: flex;
@@ -12,7 +12,7 @@ body {
 .ingredient-description {
     display: block;
     font-style: italic;
-    color: #666;
+    color: #e91e63;
     font-size: 14px;
     margin-top: -10px;
 }
@@ -28,7 +28,7 @@ body {
 }
 
 #addIngredientButton {
-    background-color: #2196F3;
+    background-color: #f06292;
     border: none;
     color: white;
     padding: 15px;
@@ -39,7 +39,7 @@ body {
 }
 
 #addIngredientButton:hover {
-    background-color: #1976D2;
+    background-color: #ec407a;
 }
 
 .tabs {
@@ -50,8 +50,8 @@ body {
 
 .tab-button {
     padding: 15px;
-    border: 2px solid #4CAF50;
-    background-color: #f1f1f1;
+    border: 2px solid #f06292;
+    background-color: #f8bbd0;
     border-radius: 4px;
     cursor: pointer;
     font-size: 18px;
@@ -63,13 +63,13 @@ body {
 }
 
 .tab-button:hover {
-    background-color: #e1e1e1;
+    background-color: #f1c6d8;
 }
 
 .tab-button.active {
-    background-color: #4CAF50;
+    background-color: #f06292;
     color: white;
-    border-color: #4CAF50;
+    border-color: #f06292;
 }
 
 .tab-content {
@@ -91,14 +91,14 @@ input[type="number"],
 select {
     padding: 15px;
     margin-bottom: 15px;
-    border: 1px solid #ccc;
+    border: 1px solid #f06292;
     border-radius: 4px;
     font-size: 18px;
 }
 
 button {
     padding: 15px;
-    background-color: #4CAF50;
+    background-color: #f06292;
     color: white;
     border: none;
     border-radius: 4px;
@@ -108,11 +108,11 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #ec407a;
 }
 
 h1, h2, h3 {
-    color: #333;
+    color: #d81b60;
     text-align: center;
     margin-bottom: 20px;
 }
@@ -136,7 +136,7 @@ h1, h2, h3 {
 
 .recipe-item .ingredient-description {
     font-size: 14px;
-    color: #666;
+    color: #e91e63;
     font-style: italic;
 }
 
@@ -170,8 +170,6 @@ h1, h2, h3 {
 .recipe-item button.remove-button i {
     font-size: 15px;
 }
-
-
 
 @media (max-width: 768px) {
     .container {
