--- a/public/styles.css
+++ b/public/styles.css
@@ -171,40 +171,116 @@ h1, h2, h3 {
     font-size: 15px;
 }
 
-@media (max-width: 768px) {
-    .container {
-        padding: 20px;
-        max-width: 90%;
-    }
+/* Base styles for the display area */
+#infoDisplay {
+    display: block;
+    margin-top: 20px;
+    font-size: 18px;
+    flex-wrap: wrap; /* Allow elements to wrap on smaller screens */
+}
 
-    button {
-        font-size: 16px;
-        padding: 12px;
-    }
+#settingsButton {
+    background-color: #f06292;
+    border: none;
+    color: white;
+    padding: 15px;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 4px;
+    margin-bottom: 15px;
+}
 
-    input[type="text"],
-    input[type="number"],
-    select {
-        font-size: 16px;
-        padding: 12px;
+#settingsButton:hover {
+    background-color: #ec407a;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 0.5s ease;
+    opacity: 0;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 30px;
+    border-radius: 8px;
+    width: 300px;
+    max-width: 100%;
+    animation: modalAnimation 0.3s ease-out;
+}
+
+@keyframes modalAnimation {
+    0% {
+        transform: scale(0.8);
+        opacity: 0;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
     }
 }
 
-@media (max-width: 480px) {
-    .container {
-        padding: 15px;
-        max-width: 100%;
-    }
+#closeModalBtn {
+    font-size: 30px;
+    color: #999;
+    cursor: pointer;
+}
 
-    button {
-        font-size: 14px;
-        padding: 10px;
-    }
+#closeModalBtn:hover {
+    color: #000;
+}
 
-    input[type="text"],
-    input[type="number"],
-    select {
-        font-size: 14px;
-        padding: 10px;
-    }
+#saveSettingsBtn {
+    background-color: #f06292;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 4px;
+    margin-top: 10px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+#saveSettingsBtn:hover {
+    background-color: #ec407a;
+}
+
+#search {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+#ingredientDropdown, #deleteIngredientButton {
+    width: 100%;
+    max-width: 400px;
+    margin-bottom: 15px;
+}
+
+#deleteIngredientButton {
+    background-color: #f06292;
+    color: white;
+    padding: 15px;
+    font-size: 18px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 10px;
+    text-align: center;
+}
+
+#deleteIngredientButton:hover {
+    background-color: #ec407a;
 }
