feat(save): add save receipes

--- a/public/styles.css
+++ b/public/styles.css
@@ -216,6 +216,8 @@ h1, h2, h3 {
     width: 300px;
     max-width: 100%;
     animation: modalAnimation 0.3s ease-out;
+    justify-content: center;
+    display: grid;
 }
 
 @keyframes modalAnimation {
@@ -236,6 +238,16 @@ h1, h2, h3 {
 }
 
 #closeModalBtn:hover {
+    color: #000;
+}
+
+#closeLoadModalBtn {
+    font-size: 30px;
+    color: #999;
+    cursor: pointer;
+}
+
+#closeLoadModalBtn:hover {
     color: #000;
 }
 
